--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,10 @@ Authors@R:
            role = c("aut", "cre"),
            email = "osvaldas.v@um.es")
 Description: This program allows filter DNA fragments in BAM files by length and location by using the SAMTOOLS software.
-License: GLP-3
+Depends:
+    R (>= 4.0.0)
+License: GLP-3 + file LICENSE
+Remotes: git::https://github.com/TearsWillFall/BTools.git
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
