--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Depends:
     R (>= 4.0.0)
 License: GLP-3 + file LICENSE
 Remotes: git::https://github.com/TearsWillFall/BTools.git
+Imports:
+biocViews:
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
